--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Introductie</title>
   </head>
   <body>
-    <h1>Portfolio</h1>
-    <h2>Lars</h2>
-    :)
+    <h1>Introductie</h1>
+    <p>Ik ben Lars Dreesen.</p>
+    <p>Ik ben 18 jaar.</p>
+    <p>Ik ben een student aan de PXL waar ik studeer voor Programmeur</p>
+    <p>zin 4</p>
+    <p>zin 5</p>
   </body>
 </html>
