--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introductie</title>
+      <link rel="stylesheet" href="stylsheet.css">
+
   </head>
   <body>
+  <header>
+      <nav>
+          <ul>
+              <li>
+                  <a href="index.html">Introductie</a>
+              </li>
+              <li>
+
+              </li>
+          </ul>
+      </nav>
+  </header>
     <h1>Introductie</h1>
     <p>Ik ben Lars Dreesen.</p>
     <p>Ik ben 18 jaar.</p>
