--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                   <a href="index.html">Introductie</a>
               </li>
               <li>
-
+                  <a href="logboek.html">Logboek</a>
               </li>
           </ul>
       </nav>
