--- a/logboek.html
+++ b/logboek.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <title>Logboek</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="stylsheet.css">
 </head>
 <body>
-$END$
+<header><nav>
+    <ul>
+        <li>
+            <a href="index.html">Introductie</a>
+        </li>
+        <li>
+            <a href="logboek.html">Logboek</a>
+        </li>
+    </ul>
+</nav></header>
+<h1>Logboek</h1>
+<table>
+    <tr>
+        <th>Week</th>
+        <th>Periode</th>
+        <th>Inhoud</th>
+        <th>Evaluaties</th>
+        <th>Opdrachten</th>
+    </tr>
+<tr>
+    <td>1</td>
+    <td>22/09 - 26/09</td>
+
+</tr>
+    <tr>
+        <td>2</td>
+        <td>29/09 - 03/10</td>
+    </tr>
+<tr>
+    <td>3</td>
+    <td>06/10 - 10/10</td>
+</tr>
+    <tr>
+        <td>4</td>
+        <td>13/10 - 17/10</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>20/10 - 24/10</td>
+    </tr>
+<tr>
+    <td>6</td>
+    <td>03/11 - 07/11</td>
+</tr>
+    <tr>
+        <td>7</td>
+        <td>10/11 - 14/11</td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>17/11 - 21/11</td>
+    </tr>
+    <tr>
+        <td>9</td>
+        <td>24/11 - 28/11</td>
+    </tr>
+    <tr>
+        <td>10</td>
+        <td>01/12 - 05/12</td>
+    </tr>
+    <tr>
+        <td>11</td>
+        <td>08/12 - 12/12</td>
+    </tr>
+    <tr>
+        <td>12</td>
+        <td>15/12 - 19/12</td>
+    </tr>
+<tr>
+    <td>13</td>
+    <td>05/01 - 09/01</td>
+</tr>
+    <tr>
+        <td>14</td>
+        <td>12/01 - 16/01</td>
+    </tr>
+</table>
 </body>
 </html>
