--- a/logboek.html
+++ b/logboek.html
@@ -19,70 +19,332 @@
 </nav></header>
 <h1>Logboek</h1>
 <table>
-    <tr>
-        <th>Week</th>
-        <th>Periode</th>
-        <th>Inhoud</th>
-        <th>Evaluaties</th>
-        <th>Opdrachten</th>
-    </tr>
 <tr>
-    <td>1</td>
-    <td>22/09 - 26/09</td>
+    <th>Week</th>
+    <th>Periode</th>
+    <th>Inhoud</th>
+    <th>Evaluaties</th>
+    <th>Opdrachten</th>
+</tr>
+    <tr>
+        <td><p>1</p></td>
+        <td><p>22/09 - 26/09</p></td>
+        <td><div>
+            <ul>
+                <li>
+                    <p>Introductie werkplekleren</p>
+                </li>
+                <li>
+                    <p>Wat is programmeren</p>
+                </li>
+                <li>
+                    <p>Introductie POP, X-Factor & SDG’s</p>
+                </li>
+                <li>
+                    <p>Introductie Scratch</p>
+                </li>
+            </ul>
+        </div></td>
+        <td><div></div></td>
+        <td><div></div></td>
+    </tr>
+    <tr>
+        <td><p>2</p></td>
+        <td><p>29/09 - 03/10</p></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Oriënteringstraject</p></li>
+                    <li><p>Installatie Git & GitHub</p></li>
+                    <li><p>Introductie Git & GitHub</p></li>
+                </ul>
+            </div>
+        </td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>LockDownBrowser</p></li>
+                </ul>
+            </div>
+        </td>
+        <td><div></div></td>
 
-</tr>
+    </tr>
     <tr>
-        <td>2</td>
-        <td>29/09 - 03/10</td>
+        <td><p>3</p></td>
+        <td><p>06/10 - 10/10</p></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>POP motivatie, kerkwadranten en reflecteren</p></li>
+                    <li><p>Labo: Git & GitHub</p></li>
+                </ul>
+            </div>
+        </td>
+        <td><div></div></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Scratch</p></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+
+    <tr>
+        <td><p>4</p></td>
+        <td><p>13/10 - 17/10</p></td>
+        <td>
+            <div><div>
+                <ul>
+                    <li><p>POP planning & studieaanpak</p></li>
+                </ul>
+            </div></div>
+        </td>
+        <td><div>
+            <ul>
+            <li><p>Git & GitHub</p></li>
+            </ul>
+        </div></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Reflecteren</p></li>
+                </ul>
+            </div>
+        </td>
+
+    </tr>
+    <tr>
+        <td><p>5</p></td>
+        <td><p>20/10 - 24/10</p></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Gastsprekers</p></li>
+                    <li><p>EPOS reflectie van oriënteringstraject</p></li>
+                </ul>
+            </div>
+        </td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Gastsprekers</p></li>
+                </ul>
+            </div>
+        </td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Planning</p></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="5"><p><em>Herfstvakantie</em></p></td>
+    </tr>
+    <tr>
+        <td><p>6</p></td>
+        <td><p>03/11 - 07/11</p></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>POP leren analyseren</p></li>
+                </ul>
+            </div>
+        </td>
+        <td><div></div></td>
+        <td><div></div></td>
     </tr>
 <tr>
-    <td>3</td>
-    <td>06/10 - 10/10</td>
+    <td><p>7</p></td>
+    <td><p>10/11 - 14/11</p></td>
+    <td>
+        <div>
+            <ul>
+                <li><p>POP carrièrekompas</p></li>
+                <li><p>Feedback evaluatie</p></li>
+            </ul>
+        </div>
+    </td>
+    <td>
+        <div>
+            <ul>
+                <li><p>C# Console</p></li>
+            </ul>
+        </div>
+    </td>
+    <td>
+        <div>
+            <ul>
+                <li><p>POP carrièrekompas</p></li>
+            </ul>
+        </div>
+    </td>
 </tr>
+
     <tr>
-        <td>4</td>
-        <td>13/10 - 17/10</td>
+        <td><p>8</p></td>
+        <td><p>17/11 - 21/11</p></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>POP personal branding</p></li>
+                    <li><p>Introductie curriculum vitae</p></li>
+                    <li><p>Introductie portfolio</p></li>
+                </ul>
+            </div>
+        </td>
+        <td><div></div></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Feedback evaluatie C# Console</p></li>
+                </ul>
+            </div>
+        </td>
     </tr>
     <tr>
-        <td>5</td>
-        <td>20/10 - 24/10</td>
-    </tr>
-<tr>
-    <td>6</td>
-    <td>03/11 - 07/11</td>
-</tr>
-    <tr>
-        <td>7</td>
-        <td>10/11 - 14/11</td>
-    </tr>
-    <tr>
-        <td>8</td>
-        <td>17/11 - 21/11</td>
-    </tr>
-    <tr>
-        <td>9</td>
-        <td>24/11 - 28/11</td>
-    </tr>
-    <tr>
-        <td>10</td>
-        <td>01/12 - 05/12</td>
+        <td><p>9</p></td>
+        <td><p>24/11 - 28/11</p></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Instroombevraging</p></li>
+                    <li><p>Feedback evaluatie</p></li>
+                </ul>
+            </div>
+        </td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>HTML & CSS</p></li>
+                </ul>
+            </div>
+        </td>
+        <td><div></div></td>
     </tr>
     <tr>
-        <td>11</td>
-        <td>08/12 - 12/12</td>
+        <td><p>10</p></td>
+        <td><p>01/12 - 05/12</p></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Documenteren en debuggen in C#</p></li>
+                    <li><p>Labo: Debugging (C#)</p></li>
+                </ul>
+            </div>
+        </td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Debugging (idem aan labo)</p></li>
+                </ul>
+            </div>
+        </td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Feedback evaluatie debugging</p></li>
+                </ul>
+            </div>
+        </td>
     </tr>
     <tr>
-        <td>12</td>
-        <td>15/12 - 19/12</td>
+        <td><p>11</p></td>
+        <td><p>08/12 - 12/12</p></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Labo: WPF</p></li>
+                    <li><p>Gastsprekers</p></li>
+                </ul>
+            </div>
+        </td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>SDG’s</p></li>
+                </ul>
+            </div>
+        </td>
+        <td><div></div></td>
     </tr>
-<tr>
-    <td>13</td>
-    <td>05/01 - 09/01</td>
-</tr>
     <tr>
-        <td>14</td>
-        <td>12/01 - 16/01</td>
+        <td><p>12</p></td>
+        <td><p>15/12 - 19/12</p></td>
+        <td>
+            <div>
+
+                <ul>
+                    <li><p>POP kernkwadranten</p></li>
+                    <li><p>Afwerken curriculum vitae</p></li>
+                    <li><p>Afwerken labo WPF</p></li>
+                </ul>
+            </div>
+        </td>
+        <td><div></div></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Curriculum Vitae</p></li>
+                </ul>
+            </div>
+        </td>
     </tr>
+    <tr>
+        <td colspan="5"><p><em>Kerstvakantie</em></p></td>
+    </tr>
+
+    <tr>
+        <td colspan="5"><p><em>Kerstvakantie</em></p></td>
+    </tr>
+    <tr>
+        <td><p>13</p></td>
+        <td><p>05/01 - 09/01</p></td>
+<td>
+    <div>
+        <ul>
+            <li><p>Infosessie Thalento</p></li>
+        </ul>
+    </div>
+</td>
+        <td><div>
+            <ul>
+                <li><p>C# WPF</p></li>
+            </ul>
+        </div></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Portfolio</p></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td><p>14</p></td>
+        <td><p>12/01 - 16/01</p></td>
+        <td>
+            <div>
+                <ul>
+                    <li><p>Introductie Corda</p></li>
+                    <li><p>Feedback evaluatie C# WPF</p></li>
+                </ul>
+            </div>
+        </td>
+        <td>
+            <div>
+                <ul>
+                    <li><p><em>Inhaalmoment</em></p></li>
+                </ul>
+            </div>
+        </td>
+        <td><div></div></td>
+    </tr>
+
 </table>
+
 </body>
 </html>
