aanmaak Ontwikkeling en opdrachten

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
               <li>
                   <a href="logboek.html">Logboek</a>
               </li>
+              <li>
+                  <a href="Ontwikkeling.html">Ontwikkeling</a>
+              </li>
+              <li>
+                  <a href="Opdrachten.html">Opdrachten</a>
+              </li>
           </ul>
       </nav>
   </header>
