--- a/logboek.html
+++ b/logboek.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="stylsheet.css">
 </head>
 <body>
-<header><nav>
+<header>
+<nav>
     <ul>
         <li>
             <a href="index.html">Introductie</a>
@@ -15,8 +16,15 @@
         <li>
             <a href="logboek.html">Logboek</a>
         </li>
+        <li>
+            <a href="Ontwikkeling.html">Ontwikkeling</a>
+        </li>
+        <li>
+            <a href="Opdrachten.html">Opdrachten</a>
+        </li>
     </ul>
-</nav></header>
+</nav>
+</header>
 <h1>Logboek</h1>
 <table>
 <tr>
