--- a/Ontwikkeling.html
+++ b/Ontwikkeling.html
@@ -31,6 +31,120 @@
     <p>Aangezien ik hiervoor al een programeer richting gedaan had leek dit de meest logiesche opleiding om te gaan doen.<br></p>
     <p>Waarom denk je dat dit beroep bij jou past?</p>
     <p></p>
+    <h1>Rollen</h1>
+    <h2>Ontwerper</h2>
+    <p>Waar sta je momenteel?</p>
+    <p>groeifase<br></p>
+    <p>
+        Wat lukt je al goed?
+    </p>
+    <p>Ik kan eenvoudige analyses en ontwerpen maken<br></p>
+    <p>
+        Wat lukt je nog niet?
+    </p>
+    <p>bij complexere projecten heb ik nog soms moeite<br></p>
+    <p>Voorbeelden</p>
+    <p>Ik heb meegewerkt aan het uitwerken van een ontwerp voor een kleine applicatie. <br>
+        Deze activiteit hoort bij de rol van ontwerper omdat ze gericht is op het voorbereiden van de realisatie van een softwareproject (OLR1).
+    </p>
+    <p>Op basis van projectvereisten heb ik nagedacht voor de keuze van een programmeertaal en een ontwikkelmethode.
+        <br>
+        Dit past binnen OLR2, omdat ik een voorstel maakte voor programmeertaal of methodiek.
+    </p>
+    <p>
+        Ik heb het voorgestelde ontwerpen besproken gehad met leerkrachten. <br>
+        overleg met ontwikkelaars of projectleiders staat centraal in OLR2.
+    </p>
+
+    <h2>Programmeur</h2>
+    <p>Waar sta je momenteel?</p>
+    <p>groeifase<br></p>
+    <p>
+        Wat lukt je al goed?
+    </p>
+    <p>Ik kan zelfstandig code schrijven volgens afspraken en methodiek<br></p>
+    <p>
+        Wat lukt je nog niet?
+    </p>
+    <p>ik heb nog moeite met grotere, bestaande codebases.<br></p>
+    <p>Voorbeelden</p>
+    <p>Ik heb Git gebruikt om code bij te houden, wijzigingen te beheren en samen te werken met anderen. <br>
+        Dit draagt bij aan een gedeelde infrastructuur en een correcte digitale werkomgeving (OLR4).
+    </p>
+    <p>Ik heb code geschreven om aan specifieke voorwaarden te voldoen. <br>
+        Dit is een kerntaak en sluit aan bij OLR3: het realiseren van softwareapplicaties volgens het projectplan.
+    </p>
+    <p>
+        Na feedback heb ik bestaande code aangepast om fouten te verbeteren. <br>
+        Deze activiteit hoort bij OLR6, vanwege onderhoud.
+    </p>
+
+    <h2>Tester</h2>
+    <p>Waar sta je momenteel?</p>
+    <p>redelijk zelfstandig<br></p>
+    <p>
+        Wat lukt je al goed?
+    </p>
+    <p>Ik kan goed bugs opsporen en maken<br></p>
+    <p>
+        Wat lukt je nog niet?
+    </p>
+    <p>bugs met code die ik niet begrijp gaat uiteraard niet<br></p>
+    <p>Voorbeelden</p>
+    <p>Ik heb zelf gemaakte code getest. <br>
+        Dit sluit aan bij OLR7: het nagaan van de werking en functionaliteit van code.
+    </p>
+    <p>Tijdens het testen ontdekte ik bugs, die ik vervolgens heb opgelost. <br>
+        Het verbeteren van code op basis van testresultaten hoort bij de rol van tester (OLR7).
+    </p>
+    <p>
+        Ik heb feedback leerkrachten gebruikt om de applicatie te verbeteren. (OLR7).
+    </p>
+
+    <h2>Communicator / Teamspeler</h2>
+    <p>Waar sta je momenteel?</p>
+    <p>groeifase<br></p>
+    <p>
+        Wat lukt je al goed?
+    </p>
+    <p>Mee denken over een probleem.<br></p>
+    <p>
+        Wat lukt je nog niet?
+    </p>
+    <p>duidelijke communicatie<br></p>
+    <p>Voorbeelden</p>
+    <p>Ik heb actief samengewerkt in een team en geholpen bij problemen. <br>
+        Samenwerking hoort bij OLR8.
+    </p>
+    <p>Ik heb mijn voortgang en resultaten duidelijk gecommuniceerd tijdens overlegmomenten of via verslagen. <br>
+        Dit sluit aan bij OLR9: efficiënt communiceren en rapporteren.
+    </p>
+    <p>Ik heb documentatie geschreven gehad over de werking van mijn applicaties. <br>
+        Dit past bij OLR10, waarbij duidelijke en gestructureerde technische documentatie centraal staat.
+    </p>
+
+    <h2>Levenslang lerende IT-professional</h2>
+    <p>Waar sta je momenteel?</p>
+    <p>beginfase<br></p>
+    <p>
+        Wat lukt je al goed?
+    </p>
+    <p>Nieuwe technologieen leren kennen<br></p>
+    <p>
+        Wat lukt je nog niet?
+    </p>
+    <p>Interesse behouden<br></p>
+    <p>Voorbeelden</p>
+    <p>Ik heb tutorials gevolgd of documentatie gelezen over nieuwe tools. <br>
+        Dit toont aan dat ik mijn kennis actief onderhoud, OLR11.
+    </p>
+    <p>Na projecten heb ik nagedacht over wat goed ging en wat ik in de toekomst kan verbeteren. <br>
+        Zelfreflectie en zelfkennis horen bij OLR12.
+    </p>
+    <p>Ik heb bij het ontwikkelen van software rekening gehouden met privacy (bv. geen gevoelige data opslaan zonder reden).
+        <br>
+        Dit sluit aan bij OLR13, waarin deontologisch, veilig en duurzaam handelen centraal staat.
+    </p>
 </main>
 
 </body>
