--- a/Ontwikkeling.html
+++ b/Ontwikkeling.html
@@ -145,6 +145,194 @@
         <br>
         Dit sluit aan bij OLR13, waarin deontologisch, veilig en duurzaam handelen centraal staat.
     </p>
+
+    <h1>Rollen</h1>
+    <table>
+        <colgroup>
+            <col style="width: 20%;">
+            <col style="width: 80%;">
+        </colgroup>
+        <thead>
+        <tr>
+            <th>OLR</th>
+            <th>Omschrijving</th>
+        </tr>
+        </thead>
+        <tr>
+            <td colspan="2"><p><strong>Rol: Ontwerper</strong></p></td>
+        </tr>
+        <tr>
+            <td><p>OLR1</p></td>
+            <td>
+                <div>
+                    <p>De gegradueerde bereidt de realisatie van een softwareproject voor.</p>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><p>OLR2</p></td>
+            <td>
+                <div>
+                    <p>De gegradueerde maakt op basis van de analyse een onderbouwd voorstel voor:</p>
+                    <ol type="a">
+                        <li><p>het ontwerp,</p></li>
+                        <li><p>de programmeertaal en</p></li>
+                        <li><p>de methodiek.</p></li>
+                    </ol>
+                    <p>De gegradueerde stemt het voorstel af met de softwareontwikkelaar, analist en/of projectleider.</p>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2"><p><strong>Rol: Programmeur</strong></p></td>
+        </tr>
+        <tr>
+            <td>
+                <p>OLR3</p>
+            </td>
+            <td>
+                <div>
+                    <p>
+                        De gegradueerde realiseert softwareapplicaties en gegevensstructuren.
+                        De gegradueerde werkt hierbij planmatig binnen de context van het projectplan,
+                        de beschikbare tools en de vooropgestelde methodiek.
+                    </p>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><p>OLR4</p></td>
+            <td>
+                <div>
+                    <p>
+                        De gegradueerde is medeverantwoordelijk voor de eigen digitale werkomgeving <br>
+                        en draagt bij tot de gedeelde infrastructuur die nodig is voor het ontwikkelen, <br>
+                        testen en in productie brengen van projecten.
+                    </p>
+                </div>
+            </td>
+        </tr>
+<tr>
+    <td>
+        <p>OLR5</p>
+    </td>
+    <td>
+        <div>
+            <p>        De gegradueerde programmeert softwaretoepassingen volgens de standaarden <br>
+                en afspraken binnen de organisatie.
+            </p>
+        </div>
+    </td>
+</tr>
+<tr> <td><p>OLR6</p></td>
+<td>
+    <div>
+        <p>
+            De gegradueerde gaat in overleg met de softwareontwikkelaar, analist en/of projectleider <br>
+            na of het opgeleverde product onderhoud en/of aanpassingen nodig heeft. <br>
+            De gegradueerde voert het onderhoud en de aanpassingen projectmatig uit, <br>
+            rekening houdend met eerder gemaakte afspraken.
+        </p>
+    </div>
+</td>
+</tr>
+        <tr>
+            <td colspan="2"><p><strong>Rol: Tester</strong></p></td>
+        </tr>
+        <tr>
+            <td><p>OLR7</p></td>
+        </tr>
+        <tr>
+            <td>
+                <div>
+                    <p>
+                        De gegradueerde gaat volgens testscenario’s de werking en functionaliteit <br>
+                        van de gerealiseerde code na en verbetert deze op basis van feedback van <br>
+                        de softwareontwikkelaar, analist, projectleider en/of gebruikers.
+                    </p>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2"><p><strong>Rol: Communicator / Teamspeler</strong></p></td>
+        </tr>
+<tr>
+    <td><p>ORL8</p></td>
+    <td>
+        <div>
+            <p>
+                De gegradueerde werkt constructief en actief samen in een multidisciplinair team <br>
+                en participeert actief tijdens overlegmomenten. <br>
+                De gegradueerde zoekt mee naar oplossingen om problemen te vermijden.
+            </p>
+        </div>
+    </td>
+</tr>
+        <tr>
+            <td><p>OLR9</p></td>
+            <td>
+                <div>
+                    <p>
+                        De gegradueerde communiceert en rapporteert efficiënt over het geleverde werk, <br>
+                        aangepast aan het doelpubliek en gebruikt hiervoor het gepaste Engelstalige vakjargon.
+                    </p>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><p>OLR10</p></td>
+            <td>
+                <div>
+                    <p>
+                        De gegradueerde documenteert de zelf ontwikkelde applicaties op een adequate <br>
+                        en overzichtelijke manier gebruikmakend van een kennisdatabank en volgens de <br>
+                        afspraken binnen de organisatie. <br>
+                        De gegradueerde geeft kwalitatieve input voor de gebruikershandleidingen, <br>
+                        referentiegidsen en online hulpbronnen.
+                    </p>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2"><p><strong>Rol: Levenslang lerende IT-professional</strong></p></td>
+        </tr>
+        <tr>
+            <td><p>OLR11</p></td>
+            <td>
+                <div>
+                    <p>
+                        De gegradueerde onderhoudt zijn deskundigheidsniveau door relevante duurzame <br>
+                        IT- en maatschappelijke ontwikkelingen actief op te volgen.
+                    </p>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><p>OLR12</p></td>
+            <td>
+                <div>
+                    <p>
+                        De gegradueerde is zelfkritisch, ontwikkelt de nodige zelfkennis en gebruikt <br>
+                        deze om zijn persoonlijke en professionele groei te bevorderen.
+                    </p>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><p>OLR13</p></td>
+            <td>
+                <div>
+                    <p>
+                        De gegradueerde handelt deontologisch en duurzaam, en houdt rekening met de <br>
+                        veiligheids- en privacyrichtlijnen.
+                    </p>
+                </div>
+            </td>
+        </tr>
+
+
+    </table>
+
 </main>
 
 </body>
