--- a/Opdrachten.html
+++ b/Opdrachten.html
@@ -25,6 +25,17 @@
         </ul>
     </nav>
 </header>
+<main>
+    <h1>Opdrachten</h1>
+    <h2>Project Scratch</h2>
+    <p>Beschrijving: Een spel waarin de speler een ballon bestuurt die moet uitwijken voor vliegtuigen. Het spel wordt moeilijker naarmate ik verder geraak en kan telkens opnieuw gestart worden.</p>
+    <h2>Git & GitHub</h2>
+    <p>Eerste taak meken met behulp van Git en Github.</p>
+    <h2>POP: Planning</h2>
+    <h2>C# Console</h2>
+    <h2>Debugging (C#)</h2>
+    <h2>curriculum vitae (CV)</h2>
+</main>
 
 </body>
 </html>
