--- a/Ontwikkeling.html
+++ b/Ontwikkeling.html
@@ -147,11 +147,7 @@
     </p>
 
     <h1>Rollen</h1>
-    <table>
-        <colgroup>
-            <col style="width: 20%;">
-            <col style="width: 80%;">
-        </colgroup>
+    <table class="rollen">
         <thead>
         <tr>
             <th>OLR</th>
@@ -159,7 +155,7 @@
         </tr>
         </thead>
         <tr>
-            <td colspan="2"><p><strong>Rol: Ontwerper</strong></p></td>
+            <td class="rol"><p><strong>Rol: Ontwerper</strong></p></td>
         </tr>
         <tr>
             <td><p>OLR1</p></td>
@@ -184,7 +180,7 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2"><p><strong>Rol: Programmeur</strong></p></td>
+            <td class="rol"><p><strong>Rol: Programmeur</strong></p></td>
         </tr>
         <tr>
             <td>
@@ -237,12 +233,11 @@
 </td>
 </tr>
         <tr>
-            <td colspan="2"><p><strong>Rol: Tester</strong></p></td>
+            <td class="rol"><p><strong>Rol: Tester</strong></p></td>
         </tr>
         <tr>
             <td><p>OLR7</p></td>
-        </tr>
-        <tr>
+
             <td>
                 <div>
                     <p>
@@ -254,7 +249,7 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2"><p><strong>Rol: Communicator / Teamspeler</strong></p></td>
+            <td class="rol"><p><strong>Rol: Communicator / Teamspeler</strong></p></td>
         </tr>
 <tr>
     <td><p>ORL8</p></td>
@@ -294,7 +289,7 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2"><p><strong>Rol: Levenslang lerende IT-professional</strong></p></td>
+            <td class="rol"><p><strong>Rol: Levenslang lerende IT-professional</strong></p></td>
         </tr>
         <tr>
             <td><p>OLR11</p></td>
