--- a/Opdrachten.html
+++ b/Opdrachten.html
@@ -28,13 +28,19 @@
 <main>
     <h1>Opdrachten</h1>
     <h2>Project Scratch</h2>
-    <p>Beschrijving: Een spel waarin de speler een ballon bestuurt die moet uitwijken voor vliegtuigen. Het spel wordt moeilijker naarmate ik verder geraak en kan telkens opnieuw gestart worden.</p>
+    <p>Beschrijving: Een spel waarin de speler een ballon bestuurt die moet uitwijken voor vliegtuigen. <br>
+        Het spel wordt moeilijker naarmate ik verder geraak en kan telkens opnieuw gestart worden.</p>
     <h2>Git & GitHub</h2>
-    <p>Eerste taak meken met behulp van Git en Github.</p>
+    <p>Beschrijving: Eerste taak meken met behulp van Git en Github.</p>
     <h2>POP: Planning</h2>
+    <p>Beschrijving: En plenner maken met al de taken en PE's in.</p>
     <h2>C# Console</h2>
+    <p>Beschrijving: Een ruimte schip spel maken waarbij het schip van planeet naar planeet gaat voor materialen te mijnen. <br>
+        In dit spel moest ik in C# een soort tank station maken waar je materialen kon verkopen voor meer brandstof.</p>
     <h2>Debugging (C#)</h2>
+    <p>Beschrijving: Ik kreeg een in C# gemaakte Art gallerij met de bedoeling dat je daar kon door lopen maar er waren een hoop error die gemaakt moesten worden.</p>
     <h2>curriculum vitae (CV)</h2>
+    <p>Beschrijving: Een CV met behulp van html en css maken.</p>
 </main>
 
 </body>
