fixes en introductie

--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
       </nav>
   </header>
     <h1>Introductie</h1>
-    <p>Ik ben Lars Dreesen.</p>
-    <p>Ik ben 18 jaar.</p>
-    <p>Ik ben een student aan de PXL waar ik studeer voor Programmeur</p>
-    <p>zin 4</p>
-    <p>zin 5</p>
+    <p>Ik ben Lars Dreesen, ik ben 19 jaar en ik volg de opleiding programmeren. <br> Ik heb voor deze richting gekozen omdat ik geïnteresseerd ben in technologie en computers. <br> Tijdens de opleiding leer ik hoe software en applicaties worden opgebouwd. <br> Ik vind het interessant om nieuwe dingen bij te leren en mezelf hierin te verbeteren. <br> Ik werk graag aan opdrachten en probeer altijd mijn best te doen. <br> Daarnaast vind ik samenwerken met anderen belangrijk. Met deze opleiding wil ik een goede basis leggen voor mijn toekomst in IT.</p>
   </body>
 </html>
