--- a/Opdrachten.html
+++ b/Opdrachten.html
@@ -28,19 +28,30 @@
 <main>
     <h1>Opdrachten</h1>
     <h2>Project Scratch</h2>
-    <p>Beschrijving: Een spel waarin de speler een ballon bestuurt die moet uitwijken voor vliegtuigen. <br>
+    <p><b>Beschrijving:</b> Een spel waarin de speler een ballon bestuurt die moet uitwijken voor vliegtuigen. <br>
         Het spel wordt moeilijker naarmate ik verder geraak en kan telkens opnieuw gestart worden.</p>
+    <p><b>Persoonlijke Uitdaging:</b> Meer doen dan dat er gevraagd was.</p>
     <h2>Git & GitHub</h2>
-    <p>Beschrijving: Eerste taak meken met behulp van Git en Github.</p>
+    <p><b>Beschrijving:</b> Eerste taak meken met behulp van Git en Github.</p>
+    <p><b>Persoonlijke Uitdaging:</b> Te snel willen zijn waar door ik soms dingen over het hoofd zag en te veel commits had.</p>
+    <p><b>Bijgeleerd:</b> De werking van Git.</p>
     <h2>POP: Planning</h2>
-    <p>Beschrijving: En plenner maken met al de taken en PE's in.</p>
+    <p><b>Beschrijving:</b> En plenner maken met al de taken en PE's in.</p>
+    <p><b>Persoonlijke Uitdaging:</b> Vinden waar alles stond.</p>
+    <p><b>Bijgeleerd:</b> Er is naast de agenda ook een planner voor het vak met meer info in.</p>
     <h2>C# Console</h2>
-    <p>Beschrijving: Een ruimte schip spel maken waarbij het schip van planeet naar planeet gaat voor materialen te mijnen. <br>
+    <p><b>Beschrijving:</b> Een ruimte schip spel maken waarbij het schip van planeet naar planeet gaat voor materialen te mijnen. <br>
         In dit spel moest ik in C# een soort tank station maken waar je materialen kon verkopen voor meer brandstof.</p>
+    <p><b>Persoonlijke Uitdaging:</b>Met constructors en methodes werken</p>
+    <p><b>Bijgeleerd:</b> Ik kan nog niet goed met constructors en methodes werken</p>
     <h2>Debugging (C#)</h2>
-    <p>Beschrijving: Ik kreeg een in C# gemaakte Art gallerij met de bedoeling dat je daar kon door lopen maar er waren een hoop error die gemaakt moesten worden.</p>
+    <p><b>Beschrijving:</b> Ik kreeg een in C# gemaakte Art gallerij met de bedoeling dat je daar kon door lopen maar er waren een hoop error die gemaakt moesten worden.</p>
+    <p><b>Persoonlijke Uitdaging:</b> Aan de gegeven code uit kunnen. </p>
+    <p><b>Bijgeleerd:</b> Gegeven code verbeteren.</p>
     <h2>curriculum vitae (CV)</h2>
-    <p>Beschrijving: Een CV met behulp van html en css maken.</p>
+    <p><b>Beschrijving:</b> Een CV met behulp van html en css maken.</p>
+    <p><b>Persoonlijke Uitdaging:</b>  Aan ideeën komen</p>
+    <p><b>Bijgeleerd:</b> Meer Html en Css kennis.</p>
 </main>
 
 </body>
