--- a/Opdrachten.html
+++ b/Opdrachten.html
@@ -52,6 +52,17 @@
     <p><b>Beschrijving:</b> Een CV met behulp van html en css maken.</p>
     <p><b>Persoonlijke Uitdaging:</b>  Aan ideeën komen</p>
     <p><b>Bijgeleerd:</b> Meer Html en Css kennis.</p>
+
+    <h1>Reflectie</h1>
+    <h2>Intro</h2>
+    <p> In deze periode werkte ik aan verschillende projecten met C#, CSS en HTML. <br> Daarnaast leerden we gestructureerd werken. Deze periode gaf mij een duidelijker beeld van hoe de werkvloer eruitziet en wat er verwacht wordt.
+        <br> Werkplekleren 1 was een belangrijke stap richting het werkveld.</p>
+    <h2>Wat vond je een bijzonder positief element van Werkplekleren 1?</h2>
+    <p>Ik vond het ineresant om aan de grotere projecten te werken.</p>
+    <h2>Wat vond je een minder leuk element van Werkplekleren 1?</h2>
+    <p>Ik zie persoonlijk geen meerwaarden in het schrijven van reflecties het kan zijn dat het voor anderen help maar voor mij vind ik het tijdverspilling en een schande dat het op punten gaat.</p>
+    <h2>Welke nieuwe inzichten neem je mee uit Werkplekleren 1?</h2>
+    <p>Github is een zeer handige side en ga ik zeker gebriuk van blijven maken.</p>
 </main>
 
 </body>
