--- a/Ontwikkeling.html
+++ b/Ontwikkeling.html
@@ -146,7 +146,7 @@
         Dit sluit aan bij OLR13, waarin deontologisch, veilig en duurzaam handelen centraal staat.
     </p>
 
-    <h1>Rollen</h1>
+    <h1>Rollen Info</h1>
     <table class="rollen">
         <thead>
         <tr>
