--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       </nav>
   </header>
     <h1>Introductie</h1>
-    <p>Ik ben Lars Dreesen, ik ben 19 jaar en ik volg de opleiding programmeren. <br> Ik heb voor deze richting gekozen omdat ik geïnteresseerd ben in technologie en computers. <br> Tijdens de opleiding leer ik hoe software en applicaties worden opgebouwd. <br> Ik vind het interessant om nieuwe dingen bij te leren en mezelf hierin te verbeteren. <br> Ik werk graag aan opdrachten en probeer altijd mijn best te doen. <br> Daarnaast vind ik samenwerken met anderen belangrijk. Met deze opleiding wil ik een goede basis leggen voor mijn toekomst in IT.</p>
+  <p>Ik ben Lars Dreesen, ik ben 19 jaar en ik volg de opleiding programmeren.</p>
+  <p>Ik heb voor deze richting gekozen omdat ik geïnteresseerd ben in technologie en computers.</p>
+  <p>Tijdens de opleiding leer ik hoe software en applicaties worden opgebouwd. </p>
+  <p>Ik vind het interessant om nieuwe dingen bij te leren en mezelf hierin te verbeteren.</p>
+  <p> Ik werk graag aan opdrachten en probeer altijd mijn best te doen. </p>
+  <p> Daarnaast vind ik samenwerken met anderen belangrijk. Met deze opleiding wil ik een goede basis leggen voor mijn toekomst in IT.</p>
   </body>
 </html>
