--- a/logboek.html
+++ b/logboek.html
@@ -150,7 +150,7 @@
         </td>
     </tr>
     <tr>
-        <td class="rol"><p><em>Herfstvakantie</em></p></td>
+        <td id="vakantie"><p><em>Herfstvakantie</em></p></td>
     </tr>
     <tr>
         <td><p>6</p></td>
@@ -302,11 +302,11 @@
         </td>
     </tr>
     <tr>
-        <td class="rol"><p><em>Kerstvakantie</em></p></td>
+        <td id="Kvakantie"><p><em>Kerstvakantie</em></p></td>
     </tr>
 
     <tr>
-        <td class="rol"><p><em>Kerstvakantie</em></p></td>
+        <td id="Kvakantie2"><p><em>Kerstvakantie</em></p></td>
     </tr>
     <tr>
         <td><p>13</p></td>
