--- a/Ontwikkeling.html
+++ b/Ontwikkeling.html
@@ -33,8 +33,12 @@
     <p></p>
     <h1>Rollen</h1>
     <h2>Ontwerper</h2>
+    <div class="bar">
+        <div class="progress ontwerper"></div>
+    </div>
     <p>Waar sta je momenteel?</p>
     <p>groeifase<br></p>
+
     <p>
         Wat lukt je al goed?
     </p>
@@ -57,8 +61,12 @@
     </p>
 
     <h2>Programmeur</h2>
+    <div class="bar">
+        <div class="progress programmeur"></div>
+    </div>
     <p>Waar sta je momenteel?</p>
     <p>groeifase<br></p>
+
     <p>
         Wat lukt je al goed?
     </p>
@@ -80,8 +88,12 @@
     </p>
 
     <h2>Tester</h2>
+    <div class="bar">
+        <div class="progress tester"></div>
+    </div>
     <p>Waar sta je momenteel?</p>
     <p>redelijk zelfstandig<br></p>
+
     <p>
         Wat lukt je al goed?
     </p>
@@ -102,8 +114,12 @@
     </p>
 
     <h2>Communicator / Teamspeler</h2>
+    <div class="bar">
+        <div class="progress teamspeler"></div>
+    </div>
     <p>Waar sta je momenteel?</p>
     <p>groeifase<br></p>
+
     <p>
         Wat lukt je al goed?
     </p>
@@ -124,8 +140,12 @@
     </p>
 
     <h2>Levenslang lerende IT-professional</h2>
+    <div class="bar">
+        <div class="progress lerende"></div>
+    </div>
     <p>Waar sta je momenteel?</p>
     <p>beginfase<br></p>
+
     <p>
         Wat lukt je al goed?
     </p>
