--- a/Ontwikkeling.html
+++ b/Ontwikkeling.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="stylsheet.css">
 </head>
-<body>
+<body id="Boven">
 <header>
     <nav>
         <ul>
@@ -167,6 +167,7 @@
     </p>
 
     <h1>Rollen Info</h1>
+    <section>
     <table class="rollen">
         <thead>
         <tr>
@@ -347,8 +348,12 @@
 
 
     </table>
-
+    </section>
 </main>
+<footer>
+    Lars Dreesen
+    <p><a href="#Boven"  class="up"><b>^</b></a></p>
+</footer>
 
 </body>
 </html>
