--- a/Opdrachten.html
+++ b/Opdrachten.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="stylsheet.css">
 </head>
-<body>
+<body id="Up">
 <header>
     <nav>
         <ul>
@@ -64,6 +64,10 @@
     <h2>Welke nieuwe inzichten neem je mee uit Werkplekleren 1?</h2>
     <p>Github is een zeer handige side en ga ik zeker gebriuk van blijven maken.</p>
 </main>
+<footer>
+    Lars Dreesen
+    <p><a href="#Up"  class="up"><b>^</b></a></p>
+</footer>
 
 </body>
 </html>
