--- a/logboek.html
+++ b/logboek.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="stylsheet.css">
 </head>
-<body>
+<body id="Boven">
 <header>
 <nav>
     <ul>
@@ -353,6 +353,9 @@
     </tr>
 
 </table>
-
+<footer>
+    Lars Dreesen
+    <p><a href="#Boven"  class="up"><b>^</b></a></p>
+</footer>
 </body>
 </html>
