--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="stylsheet.css">
 
   </head>
-  <body>
+  <body id="boven">
   <header>
       <nav>
           <ul>
@@ -27,11 +27,15 @@
       </nav>
   </header>
     <h1>Introductie</h1>
-  <p>Ik ben Lars Dreesen, ik ben 19 jaar en ik volg de opleiding programmeren.</p>
+  <p>Ik ben Lars Dreesen, ik ben 18 jaar en ik volg de opleiding programmeren.</p>
   <p>Ik heb voor deze richting gekozen omdat ik geïnteresseerd ben in technologie en computers.</p>
   <p>Tijdens de opleiding leer ik hoe software en applicaties worden opgebouwd. </p>
   <p>Ik vind het interessant om nieuwe dingen bij te leren en mezelf hierin te verbeteren.</p>
   <p> Ik werk graag aan opdrachten en probeer altijd mijn best te doen. </p>
-  <p> Daarnaast vind ik samenwerken met anderen belangrijk. Met deze opleiding wil ik een goede basis leggen voor mijn toekomst in IT.</p>
+  <p> Met deze opleiding wil ik een goede basis leggen voor mijn toekomst in IT.</p>
   </body>
+  <footer>
+      Lars Dreesen
+      <p><a href="#boven"  class="up"><b>^</b></a></p>
+  </footer>
 </html>
